 dbg_display_driver.v      Locally Removed           650 
 phy_ocb_mon.v             Locally Removed           650 
 rank_cntrl.v              Locally Modified          650 
 ecc_merge_enc.v           Locally Modified          650 
 xilinx_ddr3_sodimm.v      Locally Removed           650 
 phy_dqs_iob.v             Locally Modified          650 
 ui_cmd.v                  Locally Modified          650 
 phy_clock_io.v            Locally Modified          650 
 bank_mach.v               Locally Modified          650 
 ddr2_ddr3_chipscope.v     Locally Modified          650 
 round_robin_arb.v         Locally Modified          650 
 col_mach.v                Locally Modified          650 
 phy_pd_top.v              Locally Modified          650 
 phy_ck_iob.v              Locally Modified          650 
 phy_rdctrl_sync.v         Locally Modified          650 
 ddr3-sdram.ucf            Locally Modified          650 
 iodelay_ctrl.v            Locally Modified          650 

Directory modules/bluespec/common/fpgaenv/physical-platform/physical-devices/ddr-sdram/ddr-sdram-xilinx
 ddr-sdram-xilinx.awb      Locally Modified          650 

Somewhat successful effort to get SDRAM working on all ML605 platforms.  It
appears we are suffering from http://www.xilinx.com/support/answers/39767.htm
as some boards sometimes fail to initialize SDRAM, signalling dbg_wrlvl_err.

Changes:
  - Set ddr_reset_n I/O standard to LVCMOS15 per Xilinx AR# 36078.
  - Restore BUFG on clock in DDR3 controller (iodelay_ctrl.v).
  - Remove the parameters in ddr3_wrapper that skipped DDR3 calibration.
    The Xilinx documentation says these should only be set for simulation,
    but is ambiguous on what happens when the parameters are set on hardware.
  - Update to code generated by MIG from ISE 14.3.  I didn't see any significant
    changes, but it didn't hurt.

  - Export calibration debug state as debug scan records when DEBUG_DDR3 AWB
    parameter is non-zero.