@@ -1,14 +1,0 @@
-//
-// Wrapper for all synthesis regions created during Bluespec compilation
-// of modules provided by this interface.  Ideally this would be generated
-// automatically, but we currently have no syntax for describing this
-// in AWB.
-//
-
-//
-// Synthesized modules make it easier to describe area groups for Xilinx
-// tools.
-//
-
-`include ".bsc/mkBNoCBridgeSynth.v"
-`include ".bsc/mkPCIEBlueNoCDevice.v"
