@@ -15179,3 +15179,14 @@ Changes:
 
   - Export calibration debug state as debug scan records when DEBUG_DDR3 AWB
     parameter is non-zero.
+
+----------
+mcadler     Date: Tue Nov 20 08:09:17 EST 2012  CSN: CSN-leap-platforms-652
+                  Tue Nov 20 13:09:17 UTC 2012
+
+
+Directory modules/bluespec/common/fpgaenv/physical-platform/physical-devices/pci-express/pcie-bluenoc-virtex6
+ pcie-virtex6.awb          Locally Modified          651 
+ pcie-virtex6-include.v    Locally Removed           651 
+
+Use %generated for modules that are synthesized.
